Completed editor de ordenes y de retrabajo
Also added new report RelacionOrdenesTerminadas.

--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
   </configSections>
   <connectionStrings>
-    <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP150012W7E64\SQLSERVER2012;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
+    <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP190057W10E64;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
     <!--  <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=192.168.1.1\compac;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" /> -->
   </connectionStrings>
   <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="System" logWarningsWhenNoCategoriesMatch="true">
     <listeners>
-      <add fileName="D:\\Temp\\Logs\\Larco2.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
+      <add fileName="D:\\Temp\\Logs\\Larco2.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" rollFileExistsBehavior="Increment" rollInterval="Midnight" asynchronous="true" rollSizeKB="100000" maxArchivedFiles="15" />
     </listeners>
     <formatters>
-      <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)}|{category}|{priority}|{message}|{eventid}|{severity}|{title}|{machine}|{dictionary({value})}|{win32ThreadId}|{activity}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
+      <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)}|{category}|{priority}|&quot;{message}&quot;|{eventid}|{severity}|{title}|{machine}|{dictionary({value})}|{win32ThreadId}|{activity}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
     </formatters>
     <categorySources>
       <add switchValue="All" name="All Events">
@@ -52,16 +52,32 @@
         <binding name="PageServiceSoap" />
         <binding name="ModulesServiceSoap" />
       </basicHttpBinding>
+      <!--
+      <customBinding>
+        <binding name="PageServiceSoap">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
+        <binding name="ModulesServiceSoap">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
+      </customBinding>
+      -->
     </bindings>
     <client>
       <endpoint address="http://localhost/EPEFrameworkService/PageService.asmx" binding="basicHttpBinding" bindingConfiguration="PageServiceSoap" contract="EPEFrameworkService.PageServiceSoap" name="PageServiceSoap" />
       <endpoint address="http://localhost/EPEFrameworkService/ModulesService.asmx" binding="basicHttpBinding" bindingConfiguration="ModulesServiceSoap" contract="FrameworkModulesService.ModulesServiceSoap" name="ModulesServiceSoap" />
+      <!--
+      <endpoint address="https://localhost/EPEFrameworkService/PageService.asmx" binding="customBinding" bindingConfiguration="PageServiceSoap" contract="EPEFrameworkService.PageServiceSoap" name="PageServiceSoap" />
+      <endpoint address="https://localhost/EPEFrameworkService/ModulesService.asmx" binding="customBinding" bindingConfiguration="ModulesServiceSoap" contract="FrameworkModulesService.ModulesServiceSoap" name="ModulesServiceSoap" />
+      -->
     </client>
   </system.serviceModel>
   <system.web>
     <customErrors mode="Off" />
-    <pages buffer="true" validateRequest="true" />
-    <compilation debug="true" targetFramework="4.0" />
+    <pages buffer="true" validateRequest="true" controlRenderingCompatibilityVersion="4.0" />
+    <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
       <forms name=".ASPXFORMSDEMO" loginUrl="logon.aspx" protection="All" path="/" timeout="30" />
     </authentication>
@@ -89,7 +105,7 @@
         <allow users="*" />
       </authorization>
     </system.web>
-  </location>  
+  </location>
   <system.web.extensions>
     <scripting>
       <webServices>
