--- a/Larco/Larco.csproj
+++ b/Larco/Larco.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BS.Larco</RootNamespace>
     <AssemblyName>Larco</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -25,9 +25,10 @@
     <IISExpressWindowsAuthentication>enabled</IISExpressWindowsAuthentication>
     <IISExpressUseClassicPipelineMode>
     </IISExpressUseClassicPipelineMode>
-    <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
     <Use64BitIISExpress />
     <UseGlobalApplicationHostFile />
+    <TargetFrameworkProfile />
+    <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,6 +38,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -45,45 +47,53 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Antlr3.Runtime">
+    <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="EPEFramework">
-      <HintPath>..\packages\EPEFramework.4.0.2\lib\EPEFramework.dll</HintPath>
+    <Reference Include="EPEFramework, Version=4.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPEFramework.4.1.1\lib\EPEFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="itextsharp, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\iTextSharp.5.5.13\lib\itextsharp.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.JScript" />
-    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Microsoft Enterprise Library 4.0 - May 2008\Bin\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\EnterpriseLibrary.Common.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Microsoft Enterprise Library 4.0 - May 2008\Bin\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Data, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\EnterpriseLibrary.Data.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\EnterpriseLibrary.Logging.6.0.1304.0\lib\NET45\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Web.Optimization">
-      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Optimization, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
@@ -91,12 +101,17 @@
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
-    <Reference Include="WebGrease">
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="WebGrease, Version=1.5.2.14234, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin\CurrentUsers.aspx" />
+    <Content Include="Admin\ListItemsConfig.aspx" />
+    <Content Include="Admin\PageConfig.aspx" />
+    <Content Include="Admin\Preview.aspx" />
     <Content Include="Admin\QueryHelper.aspx" />
     <Content Include="Admin\RefreshCache.aspx" />
     <Content Include="Catalogos\Clientes.aspx" />
@@ -139,9 +154,6 @@
     <Content Include="Images\select.gif" />
     <Content Include="Images\text.gif" />
     <Content Include="Images\textarea.gif" />
-    <Content Include="Admin\ListItemsConfig.aspx" />
-    <Content Include="Admin\PageConfig.aspx" />
-    <Content Include="Admin\Preview.aspx" />
     <Content Include="Images\ui-anim_basic_16x16.gif" />
     <Content Include="InvalidAccess.aspx" />
     <Content Include="Inventarios\Salidas.aspx" />
@@ -154,6 +166,7 @@
     <Content Include="Reportes\OrdenesUrgentesVencidasPorEmpleado.aspx" />
     <Content Include="Reportes\RelacionFechaEntrega.aspx" />
     <Content Include="Reportes\RelacionOrdenCompra.aspx" />
+    <Content Include="Reportes\RelacionOrdenesTermindas.aspx" />
     <Content Include="Reportes\ReportePuntosPorEmpleado.aspx" />
     <Content Include="Reportes\SalidasAlmacen.aspx" />
     <Content Include="Reportes\ScrapDinero.aspx" />
@@ -290,7 +303,30 @@
       <DependentUpon>CurrentUsers.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Admin\CurrentUsers.aspx.designer.cs" />
+    <Compile Include="Admin\CurrentUsers.aspx.designer.cs">
+      <DependentUpon>CurrentUsers.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\ListItemsConfig.aspx.cs">
+      <DependentUpon>ListItemsConfig.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\ListItemsConfig.aspx.designer.cs">
+      <DependentUpon>ListItemsConfig.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\PageConfig.aspx.cs">
+      <DependentUpon>PageConfig.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\PageConfig.aspx.designer.cs">
+      <DependentUpon>PageConfig.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Preview.aspx.cs">
+      <DependentUpon>Preview.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Preview.aspx.designer.cs">
+      <DependentUpon>Preview.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\QueryHelper.aspx.cs">
       <DependentUpon>QueryHelper.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -446,27 +482,6 @@
     <Compile Include="Handlers\AjaxController.ashx.cs">
       <DependentUpon>AjaxController.ashx</DependentUpon>
     </Compile>
-    <Compile Include="Admin\ListItemsConfig.aspx.cs">
-      <DependentUpon>ListItemsConfig.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Admin\ListItemsConfig.aspx.designer.cs">
-      <DependentUpon>ListItemsConfig.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Admin\PageConfig.aspx.cs">
-      <DependentUpon>PageConfig.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Admin\PageConfig.aspx.designer.cs">
-      <DependentUpon>PageConfig.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Admin\Preview.aspx.cs">
-      <DependentUpon>Preview.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Admin\Preview.aspx.designer.cs">
-      <DependentUpon>Preview.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Handlers\AjaxDownloadHandler.ashx.cs">
       <DependentUpon>AjaxDownloadHandler.ashx</DependentUpon>
     </Compile>
@@ -576,6 +591,13 @@
     <Compile Include="Reportes\RelacionOrdenCompra.aspx.designer.cs">
       <DependentUpon>RelacionOrdenCompra.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\RelacionOrdenesTermindas.aspx.cs">
+      <DependentUpon>RelacionOrdenesTermindas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reportes\RelacionOrdenesTermindas.aspx.designer.cs">
+      <DependentUpon>RelacionOrdenesTermindas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\ReportePuntosPorEmpleado.aspx.cs">
       <DependentUpon>ReportePuntosPorEmpleado.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -679,9 +701,6 @@
     <Content Include="Site.Master" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Handlers\AjaxController.ashx" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
@@ -691,6 +710,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Handlers\AjaxDownloadHandler.ashx" />
+    <Content Include="Handlers\AjaxController.ashx" />
     <None Include="Properties\PublishProfiles\Larco.pubxml" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-small.eot" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-small.ttf" />
